[package]
name = "metaperss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27", features = ["json", "cookies", "multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
regex = "1.10.3"
log = "0.4.21"
simple_logger = "4.3.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
phpass = "0.1.3"
socket2 = "0.5.6"
warp = "0.3.6"
scraper = "0.19.0"
local-ip-address = "0.6.1"
url = "2.5.0"
base64 = "0.22.0"
suppaftp = "5.3.1"
russh = "0.43.0"
russh-keys = "0.43.0"
async-trait = "0.1.78"